Fix live source parsing and Android compatibility